data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_818.wast
;; 9. **Unreachable Loop Code**:    Insert a sequence within a loop that includes an unreachable instruction followed by a conditional branch intended to be evaluated.    Constraint: Ensure that unreachable code is properly handled and does not interfere with subsequent branches.    Expected: Identification and handling of unreachable instructions should prevent CFG inconsistencies.

(assert_invalid
  (module (func $unreachable_loop_code
    (loop
      (unreachable)
      (br_if 0 (i32.const 1))
    )
  ))
  "type mismatch"
)